Fix dependency conflict in requirements.txt and update utils

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,12 @@
-Flask
+Flask>=2.0.0
+torch>=2.0.0
+faiss-gpu>=1.7.0
+numpy>=1.21.0
+transformers>=4.30.0
+Pillow>=9.0.0
+langdetect>=1.0.9
+googletrans>=3.1.0a0
+accelerate>=0.20.0
+safetensors>=0.3.1
+opencv-python>=4.7.0
+-e git+https://github.com/XMUDeepLIT/LLaVE.git@main#egg=llava
