--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
+underthesea
+pyvi
+translate
 Flask>=2.0.0
 torch>=2.0.0
 faiss-gpu>=1.7.0
-numpy>=1.21.0
+numpy==1.26
 transformers>=4.30.0
 Pillow>=9.0.0
 langdetect>=1.0.9
